Closed
Bug 102743
Opened 24 years ago
Closed 24 years ago
M095 Trunk Crash pressing Back or Forward on O'Reilly website [@ 0x00690073] [@ 0x612e7364][@ 0x6f642e64][@ nsStreamLoader::~nsStreamLoader][@ nsCOMPtr_base::~nsCOMPtr_base]
Categories
(Core :: Networking: HTTP, defect, P1)
Core
Networking: HTTP
Tracking
()
VERIFIED
FIXED
mozilla0.9.6
People
(Reporter: steven.chapel, Assigned: darin.moz)
References
()
Details
(Keywords: crash, topcrash)
Crash Data
Attachments
(3 files, 3 obsolete files)
|
4.81 KB,
text/plain
|
Details | |
|
5.78 KB,
patch
|
gagan
:
review+
rpotts
:
superreview+
|
Details | Diff | Splinter Review |
|
904 bytes,
patch
|
Details | Diff | Splinter Review |
Reproducability: Always
Steps to reproduce:
1. Go to the O'Reilly web site at http://www.oreilly.com/
2. Click on the "Web & Internet" Resource Center in the menu on the left.
3. Click on one of the Web Programming books.
4. Press the Back button
Expected Result: The browser goes back to the previous page.
Actual Result: Crash!
I've reproduced this many times with build 2001100203 on Windows 2000 SP2. Once, the crash happened with the Forward button rather than the Back button. It may be possible that the above steps do not cause the crash reliably, but I was always able to crash Mozilla by hitting Back a few times and Forward a few times repeatedly.
Talkback incidents:
TB36175626Q
TB36172925M
TB36164426K
TB36161816Y
TB36161811Z
Comment 1•24 years ago
|
||
Crashes for me too on W2K build 2001100203
TB36176603K
Comment 2•24 years ago
|
||
WinNT4/2001100203-trunk same, TB36196947E.
Keyword 'crash' should be added...
Comment 3•24 years ago
|
||
Adding "crash" keyword, and marking NEW.
-> History:Session for initial triage, pending talkback retrieval
Assignee: asa → radha
Status: UNCONFIRMED → NEW
Component: Browser-General → History: Session
Ever confirmed: true
Keywords: crash
QA Contact: doronr → claudius
Comment 4•24 years ago
|
||
Adam's talkback:
0x0429f04f
nsStreamLoader::OnDataAvailable
[d:\builds\seamonkey\mozilla\netwerk\base\src\nsStreamLoader.cpp, line 166]
nsHttpChannel::Resume
[d:\builds\seamonkey\mozilla\netwerk\protocol\http\src\nsHttpChannel.cpp, line 1623]
nsRequestObserverProxy::FireEvent
[d:\builds\seamonkey\mozilla\netwerk\base\src\nsRequestObserverProxy.cpp, line 266]
PL_HandleEvent [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 591]
PL_ProcessPendingEvents [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c,
line 524]
_md_EventReceiverProc [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line
1072]
Steve's talkback:
0x00690073
nsCOMPtr_base::~nsCOMPtr_base
[d:\builds\seamonkey\mozilla\xpcom\glue\nsCOMPtr.cpp, line 65]
nsStreamLoader::~nsStreamLoader
[d:\builds\seamonkey\mozilla\netwerk\base\src\nsStreamLoader.h]
nsStreamLoader::`scalar deleting destructor'
nsStreamLoader::Release
[d:\builds\seamonkey\mozilla\netwerk\base\src\nsStreamLoader.cpp, line 97]
SheetLoadData::OnStreamComplete
[d:\builds\seamonkey\mozilla\content\html\style\src\nsCSSLoader.cpp, line 675]
nsStreamLoader::OnStopRequest
[d:\builds\seamonkey\mozilla\netwerk\base\src\nsStreamLoader.cpp, line 138]
nsHttpChannel::OnStopRequest
[d:\builds\seamonkey\mozilla\netwerk\protocol\http\src\nsHttpChannel.cpp, line 2312]
nsOnStopRequestEvent::HandleEvent
[d:\builds\seamonkey\mozilla\netwerk\base\src\nsRequestObserverProxy.cpp, line 177]
PL_HandleEvent [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 591]
PL_ProcessPendingEvents [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c,
line 524]
_md_EventReceiverProc [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line
1072]
nsAppShellService::Run
[d:\builds\seamonkey\mozilla\xpfe\appshell\src\nsAppShellService.cpp, line 457]
main1 [d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp, line 1307]
main [d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp, line 1624]
WinMain [d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp, line 1642]
WinMainCRTStartup()
KERNEL32.DLL + 0x17d08 (0x77e97d08)
Comment 5•24 years ago
|
||
-> Networking: HTTP ?
Comment 6•24 years ago
|
||
seems to be in networking module. cc'ing darin.
Assignee: radha → gagan
Component: History: Session → Networking: HTTP
| Assignee | ||
Comment 7•24 years ago
|
||
investigating for 0.9.6
Priority: -- → P1
Target Milestone: --- → mozilla0.9.6
Is this the same crash I get hitting back on washingtonpost.com? I have
submitted a couple of talkback reports but I don't know their ids. Perhaps
search for kcarter@telus.net. This is reproducible every time on my Win98SE.
Go to an article. Hit Back. Crash. I would have thought that this is a pretty
high profile sight to delay a milestone.
| Assignee | ||
Comment 10•24 years ago
|
||
i am able to reproduce this crash everytime under linux... investigating.
| Assignee | ||
Updated•24 years ago
|
OS: Windows 2000 → All
Hardware: PC → All
| Assignee | ||
Comment 11•24 years ago
|
||
in a debug build, i get the following assertion just before the crash:
###!!! ASSERTION: broken loading table: 'oldData == aLoadData', file
nsCSSLoader.cpp, line 722
###!!! Break: at file nsCSSLoader.cpp, line 722
cc'ing hyatt, hoping he may have see a connection between this assertion and
OnStreamComplete crasher.
| Assignee | ||
Comment 12•24 years ago
|
||
this crash seems to happen when we're loading the CSS file from the cache... not
sure how that is related yet.
| Assignee | ||
Comment 13•24 years ago
|
||
also, fwiw, i can't repro this crash on the 0.9.4 branch.
| Assignee | ||
Comment 14•24 years ago
|
||
| Assignee | ||
Comment 15•24 years ago
|
||
| Assignee | ||
Comment 16•24 years ago
|
||
OK.. now i see this error on the console:
WARNING: CSSLoaderImpl::DidLoadStyle: Load of URL
'http://web.oreilly.com/style/style2.css' failed. Error code: 3, file
nsCSSLoader.cpp, line 932
and, after closer inspection, ic that this CSS document is fetched via redirect.
so, this must somehow be a regression from my recent checkin to cache redirects.
(see bug 94004)
i think it'll be important to try to fix this for 0.9.5
Status: NEW → ASSIGNED
Target Milestone: mozilla0.9.6 → mozilla0.9.5
| Assignee | ||
Comment 17•24 years ago
|
||
| Assignee | ||
Comment 18•24 years ago
|
||
| Assignee | ||
Comment 19•24 years ago
|
||
| Assignee | ||
Comment 20•24 years ago
|
||
hyatt: sorry to bother you with this bug... this is definitely a necko issue.
| Assignee | ||
Updated•24 years ago
|
Attachment #52676 -
Attachment is obsolete: true
| Assignee | ||
Updated•24 years ago
|
Attachment #52679 -
Attachment is obsolete: true
| Assignee | ||
Updated•24 years ago
|
Attachment #52720 -
Attachment is obsolete: true
| Assignee | ||
Comment 21•24 years ago
|
||
cc'ing rpotts for review
| Assignee | ||
Comment 22•24 years ago
|
||
Comment 23•24 years ago
|
||
0.9.5 is out the door. bumping TM up by one.
Target Milestone: mozilla0.9.5 → mozilla0.9.6
Keywords: topcrash
Summary: Crash pressing Back or Forward on O'Reilly website → Crash pressing Back or Forward on O'Reilly website [@ 0x00690073]
Comment 24•24 years ago
|
||
should NS_BINDING_REDIRECTED be a successful code?
Comment 25•24 years ago
|
||
*** Bug 104899 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 26•24 years ago
|
||
dougt: well.. perhaps.. but i suspect that would throw off a lot of consumers,
who simply use NS_SUCCEEDED/NS_FAILED macros.
Comment 27•24 years ago
|
||
Comment on attachment 52729 [details] [diff] [review]
v1.3 patch: minor revisions - make sure libpr0n handles redirects correctly
r=gagan
Attachment #52729 -
Flags: review+
| Assignee | ||
Comment 28•24 years ago
|
||
*** Bug 104441 has been marked as a duplicate of this bug. ***
Comment 29•24 years ago
|
||
*** Bug 105043 has been marked as a duplicate of this bug. ***
Comment 30•24 years ago
|
||
*** Bug 105019 has been marked as a duplicate of this bug. ***
Comment 31•24 years ago
|
||
*** Bug 105031 has been marked as a duplicate of this bug. ***
Comment 32•24 years ago
|
||
Comment on attachment 52729 [details] [diff] [review]
v1.3 patch: minor revisions - make sure libpr0n handles redirects correctly
sr=rpotts@netscape.com
looks good!
Attachment #52729 -
Flags: superreview+
| Assignee | ||
Comment 33•24 years ago
|
||
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 34•24 years ago
|
||
Adding a signature for talkback tracking. I'll keep an eye on this fix.
Summary: Crash pressing Back or Forward on O'Reilly website [@ 0x00690073] → M095, Trunk Crash pressing Back or Forward on O'Reilly website [@ 0x00690073] [@ 0x612e7364]
Comment 35•24 years ago
|
||
*** Bug 105807 has been marked as a duplicate of this bug. ***
Comment 36•24 years ago
|
||
Not seeing nsStreamLoader::~nsStreamLoader or nsStreamLoader::OnDataAvailable
signatures in Trunk builds after 2001101806. Marking VERIFIED.
Status: RESOLVED → VERIFIED
Comment 37•24 years ago
|
||
jsut a change to the summary needed for talkback
Summary: M095, Trunk Crash pressing Back or Forward on O'Reilly website [@ 0x00690073] [@ 0x612e7364] → M095 Trunk Crash pressing Back or Forward on O'Reilly website [@ 0x00690073] [@ 0x612e7364]
Comment 38•24 years ago
|
||
Adding the signature that talkback is looking for.
Summary: M095 Trunk Crash pressing Back or Forward on O'Reilly website [@ 0x00690073] [@ 0x612e7364] → M095 Trunk Crash pressing Back or Forward on O'Reilly website [@ 0x00690073] [@ 0x612e7364][@ nsCOMPtr_base::~nsCOMPtr_base]
Comment 39•24 years ago
|
||
*** Bug 106475 has been marked as a duplicate of this bug. ***
Comment 40•24 years ago
|
||
*** Bug 107220 has been marked as a duplicate of this bug. ***
Comment 41•24 years ago
|
||
*** Bug 107522 has been marked as a duplicate of this bug. ***
Comment 42•24 years ago
|
||
Copying summary info from dupes for Talkback tracking.
Summary: M095 Trunk Crash pressing Back or Forward on O'Reilly website [@ 0x00690073] [@ 0x612e7364][@ nsCOMPtr_base::~nsCOMPtr_base] → M095 Trunk Crash pressing Back or Forward on O'Reilly website [@ 0x00690073] [@ 0x612e7364][@ 0x6f642e64][@ nsStreamLoader::~nsStreamLoader][@ nsCOMPtr_base::~nsCOMPtr_base]
Comment 43•24 years ago
|
||
*** Bug 107866 has been marked as a duplicate of this bug. ***
Comment 44•24 years ago
|
||
*** Bug 109060 has been marked as a duplicate of this bug. ***
Comment 45•24 years ago
|
||
*** Bug 109724 has been marked as a duplicate of this bug. ***
Updated•14 years ago
|
Crash Signature: [@ 0x00690073]
[@ 0x612e7364]
[@ 0x6f642e64]
[@ nsStreamLoader::~nsStreamLoader]
[@ nsCOMPtr_base::~nsCOMPtr_base]
You need to log in
before you can comment on or make changes to this bug.
Description
•