fixes bug 102743 "Crash pressing Back or Forward on O'Reilly website" r=gagan, sr=rpotts